--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -47,14 +47,17 @@
 <body class="font-['helvetica_now_display'] bg-black text-white">
     <nav class="w-full flex items-center justify-between px-4 py-2 bg-black-900 shadow-lg">
         <h3 class="brand-name text-xl font-bold text-center w-1/3">The Virtual Vault</h3>
-        <div class="flex justify-end w-1/3">
-            <div class="flex gap-6">
-                <a href="/shop" class="hover:text-gray-400">Shop</a>
-                <a href="/cart" class="hover:text-gray-400">Cart</a>
-                <a href="/" class="hover:text-gray-400">My Account</a>
-                <a href="/logout" class="hover:text-gray-400">Logout</a>
-            </div>
-        </div>
+        <% var loggedin=typeof loggedin !=="undefined" ? loggedin : true %>
+            <% if (loggedin) { %>
+                <div class="flex justify-end w-1/3">
+                    <div class="flex gap-6">
+                        <a href="/shop" class="hover:text-gray-400">Shop</a>
+                        <a href="/cart" class="hover:text-gray-400">Cart</a>
+                        <a href="/" class="hover:text-gray-400">My Account</a>
+                        <a href="/users/logout" class="hover:text-red-600">Logout</a>
+                    </div>
+                </div>
+            <% } %>
     </nav>
     <!-- Rest of your content -->
 </body>
